Enable LIT in colab and jupyter notebooks.
PiperOrigin-RevId: 346311084

--- a/environment.yml
+++ b/environment.yml
@@ -30,5 +30,5 @@ dependencies:
         - umap-learn
         - transformers==2.11.0
         - google-cloud-translate
-        - rouge-score
+        - portpicker
         - annoy
